# calfkit-peripherals

./: .gitignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES.md  data.json  pyproject.toml  release-please-config.json
.github/workflows/: build.yml  ci.yml  coverage.yml  release.yml  test.yml
components/: README.md
components/_template/: METADATA.yaml  README.md  pyproject.toml
components/hermes-agent/: METADATA.yaml  NODE.md  README.md  pyproject.toml
components/hermes-agent/patches/: 0002-todo-store-constructor-seed.patch
components/hermes-agent/scripts/: rewrite_imports.py
components/hermes-agent/src/calfkit_hermes/_shims/: model_tools.py
components/hermes-agent/src/calfkit_hermes/_shims/agent/: auxiliary_client.py
components/hermes-agent/src/calfkit_hermes/_shims/agent/lsp/: __init__.py  range_shift.py  reporter.py  servers.py
components/hermes-agent/src/calfkit_hermes/_shims/gateway/: status.py
components/hermes-agent/src/calfkit_hermes/_shims/hermes_cli/: _subprocess_compat.py  auth.py  config.py  plugins.py  profiles.py
components/hermes-agent/src/calfkit_hermes/_vendor/agent/: file_safety.py  i18n.py  skill_utils.py  web_search_registry.py
components/hermes-agent/src/calfkit_hermes/_vendor/tools/: __init__.py  approval.py  budget_config.py  code_execution_tool.py  credential_files.py  env_passthrough.py  file_operations.py  file_tools.py  fuzzy_match.py  interrupt.py  lazy_deps.py  managed_tool_gateway.py  patch_parser.py  process_registry.py  registry.py  terminal_tool.py  thread_context.py  tirith_security.py  todo_tool.py  tool_backend_helpers.py  tool_output_limits.py  url_safety.py
components/hermes-agent/src/calfkit_hermes/_vendor/tools/environments/: __init__.py  base.py  daytona.py  docker.py  file_sync.py  local.py  managed_modal.py  modal.py  modal_utils.py  singularity.py  ssh.py
components/hermes-agent/src/calfkit_hermes/_vendor/tools/web_providers/: brave_free.py  ddgs.py  searxng.py  tavily.py
components/hermes-agent/src/calfkit_hermes/node/: __init__.py  _runtime.py  code.py  files.py  shell.py  todo.py  web.py
components/hermes-agent/tests/: conftest.py  test_functional_smoke.py  test_import_smoke.py  test_node_code.py  test_node_files.py  test_node_runtime.py  test_node_shell.py  test_node_todo.py  test_node_web.py  test_rewrite_imports.py  test_shims.py  test_vendored_fuzzy_match.py  test_vendored_patch_parser.py  test_vendored_todo_tool.py  test_web_providers.py  test_web_search_import_smoke.py  test_web_search_registry.py  test_web_url_safety.py
components/pydantic-web-fetch/: METADATA.yaml  NODE.md  README.md  pyproject.toml
components/pydantic-web-fetch/patches/: 0001-ssrf-streaming-byte-cap.patch
components/pydantic-web-fetch/src/calfkit_pydantic_web_fetch/: results.py
components/pydantic-web-fetch/src/calfkit_pydantic_web_fetch/_vendor/: _ssrf.py
components/pydantic-web-fetch/src/calfkit_pydantic_web_fetch/_vendor/common_tools/: web_fetch.py
components/pydantic-web-fetch/src/calfkit_pydantic_web_fetch/node/: __init__.py
components/pydantic-web-fetch/tests/: conftest.py  test_node_web_fetch.py  test_ssrf.py  test_web_fetch.py
docs/: known-bugs.md  project-structure.md
docs/adr/: 0001-vendor-pydantic-ai-web-fetch-self-contained.md  0002-per-vendor-config-now-unify-later.md  0003-vendor-hermes-todo-operator-defer-store.md  0004-node-tenancy-key-and-in-memory-state.md  0005-thin-typed-wrappers-over-dispatch-seam.md  0006-fail-closed-node-guards-over-vendor-sharing.md  0007-flat-public-api-reexport.md
docs/design/: coverage-improvement-plan.md  node-port.md  shell-file-tool-port.md  stage-d-port-notes.md  test-vendoring-port.md  todo-tool-port.md  web-fetch-tool-port.md  web-search-tool-port.md  web-tools-port.md
docs/reference/: tool-contracts.md
docs/tools-research/: aggregated-top-candidates.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0507d6892eac2991_async_utils_py.html  z_0507d6892eac2991_file_safety_py.html  z_0507d6892eac2991_i18n_py.html  z_0507d6892eac2991_redact_py.html  z_0507d6892eac2991_skill_utils_py.html  z_0507d6892eac2991_web_search_provider_py.html  z_0507d6892eac2991_web_search_registry_py.html  z_116627630adcca34_session_context_py.html  z_116627630adcca34_status_py.html  z_19ba89f32aacf3df_model_tools_py.html  z_36c3f58a76e6520f_auxiliary_client_py.html  z_534634326c0b8ee2_ansi_strip_py.html  z_534634326c0b8ee2_approval_py.html  z_534634326c0b8ee2_binary_extensions_py.html  z_534634326c0b8ee2_budget_config_py.html  z_534634326c0b8ee2_code_execution_tool_py.html  z_534634326c0b8ee2_credential_files_py.html  z_534634326c0b8ee2_env_passthrough_py.html  z_534634326c0b8ee2_file_operations_py.html  z_534634326c0b8ee2_file_state_py.html  z_534634326c0b8ee2_file_tools_py.html  z_534634326c0b8ee2_fuzzy_match_py.html  z_534634326c0b8ee2_interrupt_py.html  z_534634326c0b8ee2_lazy_deps_py.html  z_534634326c0b8ee2_managed_tool_gateway_py.html  z_534634326c0b8ee2_patch_parser_py.html  z_534634326c0b8ee2_path_security_py.html  z_534634326c0b8ee2_process_registry_py.html  z_534634326c0b8ee2_registry_py.html  z_534634326c0b8ee2_terminal_tool_py.html  z_534634326c0b8ee2_thread_context_py.html  z_534634326c0b8ee2_tirith_security_py.html  z_534634326c0b8ee2_todo_tool_py.html  z_534634326c0b8ee2_tool_backend_helpers_py.html  z_534634326c0b8ee2_tool_output_limits_py.html  z_534634326c0b8ee2_url_safety_py.html  (+36 more)
src/calfkit_tools/: __init__.py  exceptions.py  tools.py
tests/: conftest.py  test_exceptions.py  test_package_surface.py  test_public_api.py
tests/hermes/: conftest.py  test_approval_behavior.py  test_base_env_behavior.py  test_code_execution_remote.py  test_credential_files_behavior.py  test_file_operations_behavior.py  test_file_safety_behavior.py  test_file_tools_behavior.py  test_functional_smoke.py  test_hermes_constants_paths.py  test_i18n_behavior.py  test_import_smoke.py  test_local_env_behavior.py  test_node_code.py  test_node_files.py  test_node_runtime.py  test_node_shell.py  test_node_todo.py  test_node_web.py  (+83 more)
(+73 files in other folders)
