[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calfkit-tools"
version = "0.1.0"
description = "Vendored agent tools for the calfkit SDK: hermes shell/files/web/todo and an SSRF-safe web_fetch, each deployable as a calfkit tool node."
readme = "README.md"
requires-python = ">=3.11"
# First-party glue (node wrappers, package scaffolding) is Apache-2.0 (repo LICENSE);
# the vendored upstream trees under src/calfkit_tools/*/_vendor are MIT. The bundled
# notices for every source travel in the distribution via license-files (below).
license = "Apache-2.0 AND MIT"
license-files = [
    "LICENSE",                 # repo's own (Apache-2.0)
    "THIRD_PARTY_NOTICES.md",  # aggregated attribution index
    "vendor/hermes/LICENSE",   # upstream NousResearch/hermes-agent (MIT)
    "vendor/web_fetch/LICENSE", # upstream pydantic/pydantic-ai (MIT)
]
authors = [{ name = "calf-ai" }]
keywords = ["calfkit", "agent", "agent-tools", "llm", "kafka", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "calfkit>=0.9.0,<0.10",
    "pydantic",                            # node/files.py, node/shell.py import at module top
    "typing_extensions",                   # node/todo.py: TypedDict in a tool signature (pydantic needs it on Py<3.12)
    "psutil",                              # hermes process-tree kill / pid liveness
    "requests",                            # hermes managed_modal imports at module top
    "PyYAML",                              # hermes i18n / utils load YAML
    "ptyprocess; sys_platform != 'win32'", # hermes PTY background processes
    "httpx>=0.27",                         # web_fetch SSRF engine + httpx-backed search providers
    "markdownify>=1.2",                    # web_fetch HTML -> markdown
    "ddgs",                                # default web_search provider (works out of the box)
]

[project.optional-dependencies]
# Remote shell-execution backends. The default (local) backend needs none of these; each
# SDK is lazy-imported by its backend module, so a base install runs locally and these
# extras enable the corresponding remote backend.
shell-docker = ["docker"]
shell-modal = ["modal"]
shell-daytona = ["daytona-sdk"]
all = ["calfkit-tools[shell-docker,shell-modal,shell-daytona]"]

[project.urls]
Homepage = "https://github.com/calf-ai/calfkit-peripherals"
Repository = "https://github.com/calf-ai/calfkit-peripherals"
Issues = "https://github.com/calf-ai/calfkit-peripherals/issues"

[dependency-groups]
# Dev/test deps — not shipped to consumers. anyio backs the web_fetch async test suites
# (pytest.mark.anyio); it is also a transitive calfkit dep but is declared here explicitly
# because the tests depend on it directly.
# prompt_toolkit is test-only: the vendored approval module's "fail closed when an
# interactive prompt_toolkit session is active" guard is dormant in the (non-interactive)
# node, but its security tests import prompt_toolkit to exercise that path.
dev = ["pytest>=8", "pytest-cov", "anyio", "prompt_toolkit"]

[tool.hatch.build.targets.sdist]
# Strict allowlist (only-include restricts the file walk itself): hatchling
# only respects .gitignore — not .git/info/exclude — so anything outside this
# list, e.g. locally-excluded working files, would otherwise leak into the sdist.
only-include = [
    "src/calfkit_tools",
    "tests",
    "vendor",
    "THIRD_PARTY_NOTICES.md",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/calfkit_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: tests that spawn real subprocesses/shells (POSIX-only, timing-sensitive); run on Linux CI",
    "integration: tests requiring external services or network (not run in normal CI)",
]

[tool.coverage.run]
# ``relative_files`` is mandatory for python-coverage-comment-action.
# coverage.py records absolute file paths by default, but the action reads the
# .coverage file inside its own Docker container, whose workspace path differs
# from the runner's. Repo-relative paths are the only ones that resolve in both.
relative_files = true
source = ["src/calfkit_tools"]
branch = true

[tool.coverage.report]
omit = ["*/__init__.py"]
