[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calfkit-tools"
version = "0.1.0"
description = "Vendored agent tools for the calfkit SDK: hermes shell/files/web/todo and an SSRF-safe web_fetch, each deployable as a calfkit tool node."
readme = "README.md"
requires-python = ">=3.11"
# First-party glue (node wrappers, package scaffolding) is Apache-2.0 (repo LICENSE);
# the vendored upstream trees under src/calfkit_tools/*/_vendor are MIT. The bundled
# notices for every source travel in the distribution via license-files (below).
license = "Apache-2.0 AND MIT"
license-files = [
    "LICENSE",                 # repo's own (Apache-2.0)
    "THIRD_PARTY_NOTICES.md",  # aggregated attribution index
    "vendor/hermes/LICENSE",   # upstream NousResearch/hermes-agent (MIT)
    "vendor/web_fetch/LICENSE", # upstream pydantic/pydantic-ai (MIT)
]
authors = [{ name = "calf-ai" }]
keywords = ["calfkit", "agent", "agent-tools", "llm", "kafka", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "calfkit>=0.9.0,<0.10",
    "pydantic",                            # node/files.py, node/shell.py import at module top
    "typing_extensions",                   # node/todo.py: TypedDict in a tool signature (pydantic needs it on Py<3.12)
    "psutil",                              # hermes process-tree kill / pid liveness
    "requests",                            # hermes managed_modal imports at module top
    "PyYAML",                              # hermes i18n / utils load YAML
    "ptyprocess; sys_platform != 'win32'", # hermes PTY background processes
    "httpx>=0.27",                         # web_fetch SSRF engine + httpx-backed search providers
    "markdownify>=1.2",                    # web_fetch HTML -> markdown
    "ddgs",                                # default web_search provider (works out of the box)
]

[project.optional-dependencies]
# Remote shell-execution backends. The default (local) backend needs none of these; each
# SDK is lazy-imported by its backend module, so a base install runs locally and these
# extras enable the corresponding remote backend.
shell-docker = ["docker"]
shell-modal = ["modal"]
shell-daytona = ["daytona-sdk"]
all = ["calfkit-tools[shell-docker,shell-modal,shell-daytona]"]

[project.urls]
Homepage = "https://github.com/calf-ai/calfkit-peripherals"
Repository = "https://github.com/calf-ai/calfkit-peripherals"
Issues = "https://github.com/calf-ai/calfkit-peripherals/issues"

[dependency-groups]
# Dev/test deps — not shipped to consumers. anyio backs the web_fetch async test suites
# (pytest.mark.anyio); it is also a transitive calfkit dep but is declared here explicitly
# because the tests depend on it directly.
# prompt_toolkit is test-only: the vendored approval module's "fail closed when an
# interactive prompt_toolkit session is active" guard is dormant in the (non-interactive)
# node, but its security tests import prompt_toolkit to exercise that path.
dev = ["pytest>=8", "pytest-cov", "anyio", "prompt_toolkit"]

[tool.hatch.build.targets.sdist]
# Strict allowlist (only-include restricts the file walk itself): hatchling
# only respects .gitignore — not .git/info/exclude — so anything outside this
# list, e.g. locally-excluded working files, would otherwise leak into the sdist.
only-include = [
    "src/calfkit_tools",
    "tests",
    "vendor",
    "THIRD_PARTY_NOTICES.md",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/calfkit_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: tests that spawn real subprocesses/shells (POSIX-only, timing-sensitive); run on Linux CI",
    "integration: tests requiring external services or network (not run in normal CI)",
]

[tool.coverage.run]
# ``relative_files`` is mandatory for python-coverage-comment-action.
# coverage.py records absolute file paths by default, but the action reads the
# .coverage file inside its own Docker container, whose workspace path differs
# from the runner's. Repo-relative paths are the only ones that resolve in both.
relative_files = true
source = ["src/calfkit_tools"]
branch = true

[tool.coverage.report]
omit = [
    "*/__init__.py",
    # Remote shell-execution backends: opt-in Stage-D infrastructure, not part of the
    # supported default surface. The node defaults to (and CI only exercises) the local
    # backend; these need live Docker/Modal/Daytona/SSH/Singularity services to run and
    # have no vendored tests. Excluded so the badge reflects the code we ship-and-support.
    # The local backend itself (environments/local.py, environments/base.py) stays.
    "*/_vendor/tools/environments/docker.py",
    "*/_vendor/tools/environments/modal.py",
    "*/_vendor/tools/environments/modal_utils.py",
    "*/_vendor/tools/environments/managed_modal.py",
    "*/_vendor/tools/environments/daytona.py",
    "*/_vendor/tools/environments/ssh.py",
    "*/_vendor/tools/environments/singularity.py",
    "*/_vendor/tools/environments/file_sync.py",
    # Dormant in the calfkit node: reachable only via CUT features (skills), the
    # omitted remote backends (Modal), or a fail-closed LSP shim — no supported
    # default path exercises them. See docs/design/coverage-improvement-plan.md Part 2.
    "*/_vendor/agent/skill_utils.py",           # served the CUT skills feature; near-live fn reached only by omitted remote backends
    "*/_vendor/tools/managed_tool_gateway.py",  # Nous managed-gateway routing — Modal-only
    "*/_vendor/agent/async_utils.py",           # safe_schedule_threadsafe imported only by environments/modal.py (omitted)
    "*/_shims/agent/lsp/range_shift.py",        # dead behind the LSP shim's get_service()->None
    "*/_shims/agent/lsp/reporter.py",           # dead behind the LSP shim's get_service()->None
]
