# Package for a single vendored component. Installed by calfkit via:
#   uv add "calfkit-<source>[...] @ git+<repo>#subdirectory=components/<source>"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calfkit-<source>"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# Gate heavy / optional backends behind extras, e.g.:
# docker = ["docker"]

[tool.hatch.build.targets.wheel]
packages = ["src/calfkit_<source>"]
