# calfkit node component vendoring the pydantic-ai SSRF-safe web_fetch tool (MIT).
# Installed by calfkit via:
#   uv add "calfkit-pydantic-web-fetch[...] @ git+<repo>#subdirectory=components/pydantic-web-fetch"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calfkit-pydantic-web-fetch"
version = "0.0.0"
description = "calfkit node component: pydantic-ai SSRF-safe web_fetch tool (vendored, MIT)"
requires-python = ">=3.11"          # vendored code targets 3.11+ (stdlib typing over typing_extensions)
dependencies = [
    "httpx>=0.27",                  # the async HTTP client used by the SSRF guard + engine
    "markdownify>=1.2",             # HTML -> markdown cleaning in the fetch engine
    "typing_extensions",            # engine uses typing_extensions.{Any, TypedDict} (until rewritten to stdlib typing)
]

[project.optional-dependencies]
# No optional backends — the fetch path is a single in-process httpx client.

[tool.hatch.build.targets.wheel]
packages = ["src/calfkit_pydantic_web_fetch"]
