# calfkit node component vendoring the pydantic-ai SSRF-safe web_fetch tool (MIT).
# Installed by calfkit via:
#   uv add "calfkit-pydantic-web-fetch[...] @ git+<repo>#subdirectory=components/pydantic-web-fetch"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calfkit-pydantic-web-fetch"
version = "0.0.0"
description = "calfkit node component: pydantic-ai SSRF-safe web_fetch tool (vendored, MIT)"
requires-python = ">=3.11"          # vendored code targets 3.11+ (stdlib typing over typing_extensions)
dependencies = [
    "calfkit>=0.9.0,<0.10",
    "httpx>=0.27",                  # the async HTTP client used by the SSRF guard + engine
    "markdownify>=1.2",             # HTML -> markdown cleaning in the fetch engine
    # typing_extensions dropped in Stage C: the engine's `typing_extensions.{Any, TypedDict}`
    # was rewritten to stdlib `typing` (fine on requires-python >= 3.11). See §3/§8.
]

[project.optional-dependencies]
# No optional backends — the fetch path is a single in-process httpx client.

[dependency-groups]
# Dev/test deps — NOT shipped to consumers (the git+subdirectory install reads only
# [project]/optional-dependencies, never dependency-groups). Installed by `uv run`/`uv sync`
# by default, so `uv run pytest` uses the project's own pytest instead of a global one.
# httpx + markdownify are already base deps, so the SSRF/fetch tests need only pytest here.
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/calfkit_pydantic_web_fetch"]
